syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package ="github.com/S-Devoe/golang-simple-bank/pb";

message LoginRequest {
    string username = 1;
    string password= 2;
}

message LoginResponse {
    string access_token = 1;
    google.protobuf.Timestamp  access_token_expires_at = 2;
    string refresh_token = 3;
    google.protobuf.Timestamp refresh_token_expires_at = 4;
    User user = 5;
    string session_id = 6;
}

